--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : rgb(230, 204, 110);
+$primary   : #121212;
 $secondary : #6a3f85;
 $accent    : #9C27B0;
 
